// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders with classname primary: <button class="base primary" role="button" /> 1`] = `
<button
  class="base primary"
  role="button"
/>
`;

exports[`Button renders with outline: <button class="base secondary outline-secondary outline" role="button" /> 1`] = `
<button
  class="base secondary outline-secondary outline"
  role="button"
/>
`;

exports[`Button renders with quiet: <button class="base secondary quiet" role="button" /> 1`] = `
<button
  class="base secondary quiet"
  role="button"
/>
`;

exports[`Button renders with size: <button class="base secondary small" role="button" /> 1`] = `
<button
  class="base secondary small"
  role="button"
/>
`;

exports[`Button renders with wrap: <button class="base secondary wrap" role="button" /> 1`] = `
<button
  class="base secondary wrap"
  role="button"
/>
`;
